testsuite/tests/properties/invalid_n_propgate/bad_arity_dyn_0.lkt
import common

class BarNode: FooNode {
    @ignored fun main_prop(): Equation = node.ref_var <- BazNode.prop4%()
}
